# EarClippingTriangulation

./: CMakeLists.txt
src/: main.cpp
